refactor: remove outdated server configuration documents
- Delete the server configuration simplification summary and proposal documents
- Streamline documentation to focus on current implementation and user guidance
- Ensure all relevant information is consolidated in the main documentation

--- a/src/CSP2.Desktop/App.xaml
+++ b/src/CSP2.Desktop/App.xaml
@@ -6,6 +6,8 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/DarkTheme.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/IconStyles.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/ButtonStyles.xaml"/>
                 <ResourceDictionary Source="Resources/Styles/ControlStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
